New in 1.0 RC 2 (rev. 732) since RC 1:
- Added italian translation
- Fix: "two hit bug" (again ;)
- Fix: server crash when server could not find server.xml

New in 1.0 RC 1 (rev. 732) since Beta 9:
* Features:
- REPLAY PLAYER:
    still in development, features for now:
	- pausing
	- fast forwarding
	- jumping to certain positions in replay (may take some time
	new replay save file format, not fixed yet, so replays may become incompatible in the future 
- enabled writing in chat without clicking into editbox
- Blobby speed more stable on slow systems (framedrop)
- auto disconnect when game is closed
- use native keyboard layout when possible
- small physics improvements
- mouse input for online games
- join server with double click
- improved chat UI
- small gfx enhancements

* Bugfixes:
- Fix: severe network problem
- Fix: "two hit bug"
- Fix: wrong winning condition in default rules
- Fix: online replays sometimes not saved
- squished ball generates only one sound now
- corrected version in server startup message
- [Windows] fixed server output messages 
- [Windows] pointer no longer freezes when alt+tab

* Performance:
- fixed a major memory leak in dedicated server
- removed possible lag due to rounding issues in speed controller
- removed needless wait in network server (only 1 ms)
- improved OpenGL performance significantly (10-30%)
- fixed some small and unlikely memleaks
- fixed performance killer in "... has won" screen


New in Beta 9 (rev. 622) since Alpha 8:
- network game: reduced data transfer
- fixed memleaks
- OGL: improved text rendering speed
- SDL: improved render speed for morphing blobs
- generally improved performance
- limited FPS in menu
- chat
- clock
- blood in SDL mode
- bots sorted
- online replays
- improved bots: difficulty adjustable, better api, better documentation
- customizable rules file


New in Alpha 8 (rev. 469) since Alpha 6:
- some graphics improvements
- performance improvements
- names
- credits added

